--- a/index.html
+++ b/index.html
@@ -1,236 +1,210 @@
 <!DOCTYPE html>
 <html lang="cs">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="www/dist/style.css" />
-    <title>GKVR</title>
-  </head>
-  <body>
-    <header class="container">
-      <nav role="navigation">
-        <ul class="socials">
-          <li>
-            <a
-              target="_blank"
-              href="https://bakalari.gymhlinsko.cz/bakaweb/Login"
-            >
-              <img
-                src="www/assets/logo/bakalari-logo.png"
-                alt="logo-bakalari"
-              />
-            </a>
-          </li>
-        </ul>
-        <ul class="navigation">
-          <li class="me-auto">
-            <a href="#" class="ms-0">
-              <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
-            </a>
-          </li>
-          <li class="menu">
-            <a href="about-us.html">Aktivity školy</a>
-            <a href="our-team.html">Náš tým</a>
-            <a href="#">Škola</a>
-            <a href="fotogalery.html">Fotogalerie</a>
-            <a href="for-applicants.html">Pro uchazeče</a>
-            <a href="#">Informace ke studiu</a>
-            <a href="contacts.html">Kontakty</a>
-          </li>
-          <li class="burger">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
-          </li>
-          <li class="mobile-menu">
-            <a href="#o-nas">O nas</a>
-            <a href="#galerie">Galerie</a>
-            <a href="#historie">Historie</a>
-            <a href="#kontakt">Kontakt</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
 
-    <main>
-      <div id="background"></div>
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link rel="stylesheet" href="www/dist/style.css"/>
+  <title>Gymnázium K. V. Raise</title>
+</head>
 
-      <div class="container">
-        <div class="row my-5">
-          <div class="col-10 mx-auto">
-            <div class="text-center">
-              <p>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam
-                neque. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
-          <div class="col-10 mx-auto">
-            <div class="text-center">
-              <p class="text-green bold">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam
-                neque. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
-          <div class="col-10 mx-auto">
-            <div class="text-center">
-              <p>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam
-                neque. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
+<body>
+<header id="header" class="container-lg container-fluid">
+  <nav role="navigation">
+    <ul id="socials">
+      <li class="me-auto">
+        <a href="index.html" class="ms-0">
+          <img class="logo" alt="logo" src="www/assets/logo/logo.png"/>
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
+          <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari"/>
+        </a>
+      </li>
+    </ul>
+    <ul id="main-navigation">
+      <li><a href="about-us.html">Aktivity školy</a></li><!--
+      --><li><a href="our-team.html">Náš tým</a></li><!--
+      --><li><a href="empty-page.html">Škola</a></li><!--
+      --><li><a href="fotogalery.html">Fotogalerie</a></li><!--
+      --><li><a href="for-applicants.html">Pro uchazeče</a></li><!--
+      --><li><a href="empty-page.html">Informace ke studiu</a></li><!--
+      --><li><a href="contacts.html">Kontakty</a></li>
+    </ul>
+    <ul id="burger-button" class="m-0">
+      <li class="burger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </li>
+    </ul>
+    <ul class="mobile-menu">
+      <li><a href="about-us.html">Aktivity školy</a></li><!--
+      --><li><a href="our-team.html">Náš tým</a></li><!--
+      --><li><a href="empty-page.html">Škola</a></li><!--
+      --><li><a href="fotogalery.html">Fotogalerie</a></li><!--
+      --><li><a href="for-applicants.html">Pro uchazeče</a></li><!--
+      --><li><a href="empty-page.html">Informace ke studiu</a></li><!--
+      --><li><a href="contacts.html">Kontakty</a></li>
+    </ul>
+  </nav>
+</header>
+
+<main>
+  <div id="background"></div>
+
+  <div class="container">
+    <div class="row my-5">
+      <div class="col-10 mx-auto">
+        <div class="text-center">
+          <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam
+            neque. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
         </div>
       </div>
+      <div class="col-10 mx-auto">
+        <div class="text-center">
+          <p class="text-green bold">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam
+            neque. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+        </div>
+      </div>
+      <div class="col-10 mx-auto">
+        <div class="text-center">
+          <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam
+            neque. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 
-      <div class="container-fluid gray-section py-5">
-        <div class="container icons my-3">
+  <div class="container-fluid gray-section py-5">
+    <div class="container icons my-3">
+      <div class="row">
+        <div class="col-10 mx-auto">
           <div class="row">
-            <div class="col-10 mx-auto">
-              <div class="row">
-                <div
-                  class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center"
-                >
-                  <a href="about-us.html" class="rotate mb-lg-3 mb-0">
-                    <div class="mx-auto">
-                      <i class="fa-solid fa-chalkboard-user fa-5x"></i>
-                    </div>
-                    <h2 class="text-blue">Základní informace</h2>
-                  </a>
-                  <span> Informace o škole, jejím životě a novinkách. </span>
+            <div class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center">
+              <a href="about-us.html" class="rotate mb-lg-3 mb-0">
+                <div class="mx-auto">
+                  <i class="fa-solid fa-chalkboard-user fa-5x"></i>
                 </div>
-                <div
-                  class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center"
-                >
-                  <a href="for-applicants.html" class="rotate mb-lg-3 mb-0">
-                    <div class="mx-auto">
-                      <i class="fa-solid fa-school fa-5x"></i>
-                    </div>
-                    <h2 class="text-yellow">Informace pro uchazeče</h2>
-                  </a>
-                  <span> Informace pro zájemce o studium. </span>
+                <h2 class="text-blue">Základní informace</h2>
+              </a>
+              <span> Informace o škole, jejím životě a novinkách. </span>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center">
+              <a href="for-applicants.html" class="rotate mb-lg-3 mb-0">
+                <div class="mx-auto">
+                  <i class="fa-solid fa-school fa-5x"></i>
                 </div>
-                <div
-                  class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center"
-                >
-                  <a href="fotogalery.html" class="rotate mb-lg-3 mb-0">
-                    <div class="mx-auto">
-                      <i class="fa-solid fa-graduation-cap fa-5x"></i>
-                    </div>
-                    <h2 class="text-green">Obrazem od nás</h2>
-                  </a>
-                  <span>
-                    Záběry ze školních výletů, seminářů, div. kroužků...
-                  </span>
+                <h2 class="text-yellow">Informace pro uchazeče</h2>
+              </a>
+              <span> Informace pro zájemce o studium. </span>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center">
+              <a href="fotogalery.html" class="rotate mb-lg-3 mb-0">
+                <div class="mx-auto">
+                  <i class="fa-solid fa-graduation-cap fa-5x"></i>
                 </div>
-              </div>
+                <h2 class="text-green">Obrazem od nás</h2>
+              </a>
+              <span>
+                  Záběry ze školních výletů, seminářů, div. kroužků...
+                </span>
             </div>
           </div>
         </div>
       </div>
+    </div>
+  </div>
 
-      <div class="container pb-5">
-        <div class="row my-5">
-          <div class="col-12">
-            <h3 class="text-center">Zřizovatelem je Pardubický kraj</h3>
-            <div class="row">
-              <div class="col-sm-6 col-12 text-center">
-                <a href="https://www.pardubickykraj.cz/" target="_blank">
-                  <img
-                    class="pardubice-img"
-                    alt="Logo Pardubického kraje"
-                    src="www/assets/logo-pardubice.png"
-                  />
-                </a>
-              </div>
-              <div class="col-sm-6 col-12 my-auto">
-                <a
-                  href="https://www.klickevzdelani.cz/"
-                  class="d-flex align-items-center justify-content-center"
-                  target="_blank"
-                >
-                  <img
-                    class="portal-img"
-                    alt="Školský portál"
-                    src="www/assets/skolsky-portal.png"
-                  />
-                  <p>Školský portál pardubického kraje</p>
-                </a>
-              </div>
-            </div>
+  <div class="container pb-5">
+    <div class="row my-5">
+      <div class="col-12">
+        <h3 class="text-center">Zřizovatelem je Pardubický kraj</h3>
+        <div class="row">
+          <div class="col-sm-6 col-12 text-center">
+            <a href="https://www.pardubickykraj.cz/" target="_blank">
+              <img class="pardubice-img" alt="Logo Pardubického kraje" src="www/assets/logo-pardubice.png"/>
+            </a>
           </div>
-          <div class="col-12 text-center">
-            <h3 class="mb-4">
-              Naše škola je fakultní školou Univerzity Palackého v Olomouci
-            </h3>
-            <a
-              href="https://www.prf.upol.cz/verejnost/pro-skoly/#c58578"
-              target="_blank"
-            >
-              <img
-                alt="logo fakultni skoly"
-                class="upol-img"
-                src="www/assets/fakultni-skola-upol.png"
-              />
+          <div class="col-sm-6 col-12 my-auto">
+            <a href="https://www.klickevzdelani.cz/" class="d-flex align-items-center justify-content-center"
+               target="_blank">
+              <img class="portal-img" alt="Školský portál" src="www/assets/skolsky-portal.png"/>
+              <p>Školský portál pardubického kraje</p>
             </a>
           </div>
         </div>
       </div>
-    </main>
+      <div class="col-12 text-center">
+        <h3 class="mb-4">
+          Naše škola je fakultní školou Univerzity Palackého v Olomouci
+        </h3>
+        <a href="https://www.prf.upol.cz/verejnost/pro-skoly/#c58578" target="_blank">
+          <img alt="logo fakultni skoly" class="upol-img" src="www/assets/fakultni-skola-upol.png"/>
+        </a>
+      </div>
+    </div>
+  </div>
+</main>
 
-    <footer>
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-4 mx-auto text-left">
-            <img
-              class="logo"
-              alt="logo"
-              src="www/assets/logo/logo-footer.png"
-            />
+<footer>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-3 col-12 mx-auto my-1 text-left">
+        <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png"/>
+      </div>
+      <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+        <div class="row">
+          <div class="col-2 my-auto">
+            <i class="fa-solid fa-location-dot fa-2x"></i>
           </div>
-          <div class="col-3 mx-auto text-center">
-            <div class="row">
-              <div class="col-2 text-right my-auto">
-                <i class="fa-solid fa-location-dot fa-2x"></i>
-              </div>
-              <div class="col-10 my-auto text-left">
-                <a
-                  href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
-                  target="_blank"
-                >
-                  Adámkova 55, 539 01 Hlinsko
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-3 mx-auto text-center">
-            <div class="row">
-              <div class="col-2 text-right my-auto">
-                <i class="fa-solid fa-comment fa-2x"></i>
-              </div>
-              <div class="col-10 d-flex flex-column text-left">
-                <a href="#"> 469 311 292 </a>
-                <a href="#"> red@gymhlinsko.cz </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-2 mx-auto text-center">
-            <a href="#">
-              <i class="fa-brands fa-facebook fa-2x"></i>
+          <div class="col-10 my-auto text-left">
+            <a href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
+               target="_blank">
+              Adámkova 55, 539 01 Hlinsko
             </a>
           </div>
         </div>
       </div>
-    </footer>
+      <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+        <div class="row">
+          <div class="col-2 my-auto">
+            <i class="fa-solid fa-comment fa-2x"></i>
+          </div>
+          <div class="col-10 d-flex flex-column text-left">
+            <a href="#"> 469 311 292 </a>
+            <a href="#"> red@gymhlinsko.cz </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+        <div class="row">
+          <div class="col-2 my-auto">
+            <i class="fa-brands fa-facebook fa-2x"></i>
+          </div>
+          <div class="col-10 my-auto text-left">
+            <a href="#" target="_blank">
+              Facebook
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 
-    <script type="text/javascript" src="www/dist/scripts.min.js"></script>
-    <script
-      defer
-      src="node_modules/@fortawesome/fontawesome-free/js/all.js"
-    ></script>
-  </body>
+<script type="text/javascript" src="www/dist/scripts.min.js"></script>
+<script defer src="node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
+</body>
+
 </html>
